fix: featured categories layout issues
* bump h2 heading size down
* centering and size issues

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -110,19 +110,13 @@ a.all-products-button
   max-width: 50%
 
 .featured-categories
-
   h2
     text-align: center
     margin-bottom: 48px
-    font-weight: 600
-    font-size: 2rem
-
-    @media screen and (max-width: $break-small)
-      font-size: 1.75rem
+    font-weight: 500
+    font-size: 1.5rem
 
   .category-list
-    --columns: #{"{{ theme.max_categories_per_row }}"}
-
     &--text 
       gap: 20px
       --columns: 1
